# nt2

modules/core/signal/bench/: common_fft.hpp  static_fft.cpp
modules/core/signal/include/nt2/signal/: extra_registers.hpp  interleaved_data_transformation.hpp  missing_functionality.hpp  static_fft.hpp
modules/core/signal/include/nt2/signal/details/: missing_functionality.hpp  operators_lite.hpp  static_sincos.hpp  twiddle_factors.hpp
modules/r_mathlib/: CMakeLists.txt
modules/r_mathlib/bench/scalar/: CMakeLists.txt  _name_.cpp  bessel_i.cpp  bessel_i_ex.cpp  bessel_j.cpp  bessel_j_ex.cpp  bessel_k.cpp  bessel_k_ex.cpp  bessel_y.cpp  bessel_y_ex.cpp  beta.cpp  choose.cpp  dbeta.cpp  dbinom.cpp  dcauchy.cpp  dchisq.cpp  dexp.cpp  df.cpp  dgamma.cpp  dgeom.cpp  dhyper.cpp  digamma.cpp  dlnorm.cpp  dlogis.cpp  dnbeta.cpp  dnbinom.cpp  dnbinom_mu.cpp  dnchisq.cpp  dnf.cpp  dnorm.cpp  dnt.cpp  dpois.cpp  dsignrank.cpp  dt.cpp  dunif.cpp  dweibull.cpp  dwilcox.cpp  exp_rand.cpp  expm1.cpp  fmax2.cpp  (+96 more)
modules/r_mathlib/cmake/: nt2.r_mathlib.dependencies.cmake
modules/r_mathlib/cover/: CMakeLists.txt
modules/r_mathlib/cover/scalar/: CMakeLists.txt  R_pow.cpp  R_pow_di.cpp  _name_.cpp  bessel_i.cpp  bessel_i_ex.cpp  bessel_j.cpp  bessel_j_ex.cpp  bessel_k.cpp  bessel_k_ex.cpp  bessel_y.cpp  bessel_y_ex.cpp  beta.cpp  choose.cpp  dbeta.cpp  dbinom.cpp  dcauchy.cpp  dchisq.cpp  dexp.cpp  df.cpp  dgamma.cpp  dgeom.cpp  dhyper.cpp  digamma.cpp  dlnorm.cpp  dlogis.cpp  dnbeta.cpp  dnbinom.cpp  dnbinom_mu.cpp  dnchisq.cpp  dnf.cpp  dnorm.cpp  dnt.cpp  dpois.cpp  dsignrank.cpp  dt.cpp  dunif.cpp  dweibull.cpp  dwilcox.cpp  exp_rand.cpp  (+98 more)
modules/r_mathlib/include/nt2/toolbox/: documentation.hpp  r_mathlib.hpp
modules/r_mathlib/include/nt2/toolbox/r_mathlib/: r_mathlib.hpp
modules/r_mathlib/include/nt2/toolbox/r_mathlib/functions/: R_pow.hpp  R_pow_di.hpp  _name_.hpp  bessel_i.hpp  bessel_i_ex.hpp  bessel_j.hpp  bessel_j_ex.hpp  bessel_k.hpp  bessel_k_ex.hpp  bessel_y.hpp  bessel_y_ex.hpp  beta.hpp  choose.hpp  dbeta.hpp  dbinom.hpp  dcauchy.hpp  dchisq.hpp  dexp.hpp  df.hpp  dgamma.hpp  dgeom.hpp  dhyper.hpp  digamma.hpp  dlnorm.hpp  dlogis.hpp  dnbeta.hpp  dnbinom.hpp  dnbinom_mu.hpp  dnchisq.hpp  dnf.hpp  dnorm.hpp  dnt.hpp  dpois.hpp  dsignrank.hpp  dt.hpp  dunif.hpp  dweibull.hpp  dwilcox.hpp  exp_rand.hpp  expm1.hpp  (+97 more)
modules/r_mathlib/include/nt2/toolbox/r_mathlib/functions/scalar/: R_pow.hpp  R_pow_di.hpp  _name_.hpp  bessel_i.hpp  bessel_i_ex.hpp  bessel_j.hpp  bessel_j_ex.hpp  bessel_k.hpp  bessel_k_ex.hpp  bessel_y.hpp  bessel_y_ex.hpp  beta.hpp  choose.hpp  dbeta.hpp  dbinom.hpp  dcauchy.hpp  dchisq.hpp  dexp.hpp  df.hpp  dgamma.hpp  dgeom.hpp  dhyper.hpp  digamma.hpp  (+114 more)
modules/r_mathlib/src/: CMakeLists.txt  Rmath.h  r_mathlib.hpp
modules/r_mathlib/unit/: CMakeLists.txt
modules/r_mathlib/unit/scalar/: CMakeLists.txt  R_pow.cpp  R_pow_di.cpp  _name_.cpp  bessel_i.cpp  bessel_i_ex.cpp  bessel_j.cpp  bessel_j_ex.cpp  bessel_k.cpp  bessel_k_ex.cpp  bessel_y.cpp  bessel_y_ex.cpp  beta.cpp  choose.cpp  dbeta.cpp  dbinom.cpp  dcauchy.cpp  dchisq.cpp  dexp.cpp  df.cpp  dgamma.cpp  dgeom.cpp  dhyper.cpp  digamma.cpp  dlnorm.cpp  dlogis.cpp  dnbeta.cpp  dnbinom.cpp  dnbinom_mu.cpp  dnchisq.cpp  dnf.cpp  dnorm.cpp  dnt.cpp  dpois.cpp  dsignrank.cpp  dt.cpp  dunif.cpp  dweibull.cpp  dwilcox.cpp  exp_rand.cpp  (+98 more)
modules/unit/include/nt2/sdk/error/: assert.hpp
modules/unit/include/nt2/sdk/unit/: perform_benchmark.hpp
tools/gather_includes/: CMakeLists.txt
tools/move_reuse/: CMakeLists.txt
tools/postconfigure/: CMakeLists.txt
(+3 files in other folders)
