##############################################################################
###   Copyright 2003 and onward LASMEA UMR 6602 CNRS/U.B.P Clermont-Ferrand
###   Copyright 2009 and onward LRI    UMR 8623 CNRS/Univ Paris Sud XI
###
###          Distributed under the Boost Software License, Version 1.0
###                 See accompanying file LICENSE.txt or copy at
###                     http://www.boost.crg/LICENSE_1_0.txt
##############################################################################

include(NT2Module)
nt2_module_source_setup(r_mathlib)
nt2_module_configure_toolbox(r_mathlib 0)

#add_subdirectory(r_mathlib)
